fix html errors, change description in config

--- a/themes/trackfellas/layout/cuba.ejs
+++ b/themes/trackfellas/layout/cuba.ejs
@@ -1,98 +1,110 @@
-
-<section>
 <aside id="sticky-social">
     <ul>
         <li><a href="https://www.facebook.com/sharer/sharer.php?u=<%- page.permalink %>" class="entypo-facebook popup"><span>Facebook</span></a></li>
         <li><a href="http://twitter.com/home?status=<%- page.permalink %>" class="entypo-twitter" target="_blank"><span>Twitter</span></a></li>
         <li><a href="https://plus.google.com/share?url=Check%20out%20this%20rTrackfellas%20post:%20<%- page.permalink %>" class="entypo-gplus" target="_blank"><span>Google+</span></a></li>
     </ul>
-</aside>    <%- image_tag( 'img/havanna.jpg', {alt: 'Old Car in Havanna', class: 'hero'}) %>
+</aside>
+<%- image_tag( 'img/havanna.jpg', {alt: 'Old Car in Havanna', class: 'hero'}) %>
     <div class="row">
         <div class="normal-content">
             <h1>Cuba Southeast Tour</h1>
-
             <p class="text-center">Trackfellas presents you the best travel routes worldwide. Our next trip brings us to the fast changing socialistic island Cuba! We will guide you on your way from old colonial Havana towards the southeast to the epicentre of the revolution in Santiago de Cuba.</p>
         </div>
         <section>
-        <div class="small-content text-center">
-            <%- image_tag( 'img/nika.jpg', {alt: 'Old Car in Havanna', class: 'routepic'}) %>
-            <p class="text-center"><strong>Trackfella Nika</strong>(25-35)from Hamburg, Germany
-                <br><strong>Skills:</strong> Globetrotter
-                <strong>Submitted Routes:</strong> 1
-                <br>
-                <a href="mailto:nika@trackfellas.com"><button class="small alert centro">Contact me!</button></a>
-            </p>
-        </div>
-        </section>
-        <section>
-        <div class="big-content">
-            <h2>Travel Route</h2>
-            <iframe src="https://www.google.com/maps/d/embed?mid=zrYZfx3FSo48.kgVtIu-lk2YI"></iframe>
-        </div>
-        </section>
-        <section>
-        <div class="normal-content text-center">
-            <h2>Key Facts</h2>
-            <p><strong>Type:</strong> Individual Trip
-                <br>
-                <strong>Date:</strong> 03.04.2015 - 21.04.2015
-                <br>
-                <strong>Duration:</strong> 18 days
-                <br>
-                <strong>Weather:</strong> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> (20 - 30 °C, dry and sunny weather)
-                <br>
-                <strong>Activities:</strong> Nightlife, Eating, Relaxing, Sightseeing, Culture
-                <strong>Terrain:</strong> Island, Beach, Nature, Mountains, Urban
-                <br>
-                <strong>Safety:</strong> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i> (Cuba is a quite safe country for travellers, however keep an eye on our belongings)
-                <strong>Number of travelers:</strong> 2 (Friends)
-                <br>
-                <strong>Required travel skills:</strong> Easy
-                <br>
-                <strong>Trip possible for:</strong> family; single woman; older traveler
-                <br>
-                <strong>Total Costs on-site:</strong> 750 € (You should travel with another person to share acommondation and transport. That would be way cheaper than traveling by yourself.)
-                <br>
-                <strong>Accommodation category:</strong> Middle-class (AC, TV, private bath)
-                <br>
-                <strong>Total distance:</strong> 2000 km
-                <br>
-                <strong>Main transportation:</strong> Taxi (1300 km) Bus (700 km)</p>
+            <div class="small-content text-center">
+                <%- image_tag( 'img/nika.jpg', {alt: 'Old Car in Havanna', class: 'routepic'}) %>
+                    <p class="text-center"><strong>Trackfella Nika</strong>(25-35)from Hamburg, Germany
+                        <br><strong>Skills:</strong> Globetrotter
+                        <strong>Submitted Routes:</strong> 1
+                        <br>
+                        <a class="button small alert centro" href="mailto:nika@trackfellas.com">Contact me!</a>
+                    </p>
             </div>
-            </section>
-            <section>
+        </section>
+        <section>
+            <div class="big-content">
+                <h2>Travel Route</h2>
+                <iframe src="https://www.google.com/maps/d/embed?mid=zrYZfx3FSo48.kgVtIu-lk2YI"></iframe>
+            </div>
+        </section>
+        <section>
+            <div class="normal-content text-center">
+                <h2>Key Facts</h2>
+                <p><strong>Type:</strong> Individual Trip
+                    <br>
+                    <strong>Date:</strong> 03.04.2015 - 21.04.2015
+                    <br>
+                    <strong>Duration:</strong> 18 days
+                    <br>
+                    <strong>Weather:</strong> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> (20 - 30 °C, dry and sunny weather)
+                    <br>
+                    <strong>Activities:</strong> Nightlife, Eating, Relaxing, Sightseeing, Culture
+                    <strong>Terrain:</strong> Island, Beach, Nature, Mountains, Urban
+                    <br>
+                    <strong>Safety:</strong> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i> (Cuba is a quite safe country for travellers, however keep an eye on our belongings)
+                    <strong>Number of travelers:</strong> 2 (Friends)
+                    <br>
+                    <strong>Required travel skills:</strong> Easy
+                    <br>
+                    <strong>Trip possible for:</strong> family; single woman; older traveler
+                    <br>
+                    <strong>Total Costs on-site:</strong> 750 € (You should travel with another person to share acommondation and transport. That would be way cheaper than traveling by yourself.)
+                    <br>
+                    <strong>Accommodation category:</strong> Middle-class (AC, TV, private bath)
+                    <br>
+                    <strong>Total distance:</strong> 2000 km
+                    <br>
+                    <strong>Main transportation:</strong> Taxi (1300 km) Bus (700 km)</p>
+            </div>
+        </section>
+        <section>
             <div class="normal-content">
                 <h2>Galerie</h2>
                 <div class="galerie">
                     <div>
-                        <a href="<%- url_for('img/cuba/1_havana.jpg') %>" data-featherlight="image"><%- image_tag( 'img/cuba/thumbnails/1_havana.jpg', {alt: 'Havana Cuba'}) %></a>
+                        <a href="<%- url_for('img/cuba/1_havana.jpg') %>" data-featherlight="image">
+                            <%- image_tag( 'img/cuba/thumbnails/1_havana.jpg', {alt: 'Havana Cuba'}) %>
+                        </a>
                     </div>
                     <div>
-                       <a href="<%- url_for('img/cuba/2_cienfuegos.jpg') %>" data-featherlight="image"><%- image_tag( 'img/cuba/thumbnails/2_cienfuegos.jpg', {alt: 'Cienfuegos Cuba'}) %></a>
+                        <a href="<%- url_for('img/cuba/2_cienfuegos.jpg') %>" data-featherlight="image">
+                            <%- image_tag( 'img/cuba/thumbnails/2_cienfuegos.jpg', {alt: 'Cienfuegos Cuba'}) %>
+                        </a>
                     </div>
                     <div>
-                       <a href="<%- url_for('img/cuba/3_viaje.jpg') %>" data-featherlight="image"><%- image_tag( 'img/cuba/thumbnails/3_viaje.jpg', {alt: 'Viaje'}) %></a>
+                        <a href="<%- url_for('img/cuba/3_viaje.jpg') %>" data-featherlight="image">
+                            <%- image_tag( 'img/cuba/thumbnails/3_viaje.jpg', {alt: 'Viaje'}) %>
+                        </a>
                     </div>
                     <div>
-                       <a href="<%- url_for('img/cuba/4_camaguey.jpg') %>" data-featherlight="image"><%- image_tag( 'img/cuba/thumbnails/4_camaguey.jpg', {alt: 'Camaguey Cuba'}) %></a>
+                        <a href="<%- url_for('img/cuba/4_camaguey.jpg') %>" data-featherlight="image">
+                            <%- image_tag( 'img/cuba/thumbnails/4_camaguey.jpg', {alt: 'Camaguey Cuba'}) %>
+                        </a>
                     </div>
                     <div>
-                       <a href="<%- url_for('img/cuba/5_bayamo.jpg') %>" data-featherlight="image"><%- image_tag( 'img/cuba/thumbnails/5_bayamo.jpg', {alt: 'Bayamo'}) %></a>
+                        <a href="<%- url_for('img/cuba/5_bayamo.jpg') %>" data-featherlight="image">
+                            <%- image_tag( 'img/cuba/thumbnails/5_bayamo.jpg', {alt: 'Bayamo'}) %>
+                        </a>
                     </div>
                     <div>
-                       <a href="<%- url_for('img/cuba/6_santiago.jpg') %>" data-featherlight="image"><%- image_tag( 'img/cuba/thumbnails/6_santiago.jpg', {alt: 'Santiago de Cuba'}) %></a>
+                        <a href="<%- url_for('img/cuba/6_santiago.jpg') %>" data-featherlight="image">
+                            <%- image_tag( 'img/cuba/thumbnails/6_santiago.jpg', {alt: 'Santiago de Cuba'}) %>
+                        </a>
                     </div>
                     <div>
-                       <a href="<%- url_for('img/cuba/7_santa_maria.jpg') %>" data-featherlight="image"><%- image_tag( 'img/cuba/thumbnails/7_santa_maria.jpg', {alt: 'Santa Maria Cuba'}) %></a>
+                        <a href="<%- url_for('img/cuba/7_santa_maria.jpg') %>" data-featherlight="image">
+                            <%- image_tag( 'img/cuba/thumbnails/7_santa_maria.jpg', {alt: 'Santa Maria Cuba'}) %>
+                        </a>
                     </div>
                 </div>
             </div>
-            </section>
-            <section>
+        </section>
+        <section>
             <div class="big-content">
                 <h2>Trip Details</h2>
                 <ul class="accordion" data-accordion>
-                <li class="accordion-navigation">
+                    <li class="accordion-navigation">
                         <a href="#panel1b"><h3>Destination Overview<span class="fa accordion-icon right"></span></h3></a>
                         <div id="panel1b" class="content active">
                             <p><strong>Country:</strong> Cuba, Caribbean
@@ -115,7 +127,7 @@
                         </div>
                     </li>
                     <li class="accordion-navigation">
-                        <a href="#panel1a"><h3>1. Havana <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><span class="fa accordion-icon right"></h3></a>
+                        <a href="#panel1a"><h3>1. Havana <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><span class="fa accordion-icon right"></span></h3></a>
                         <div id="panel1a" class="content">
                             <p><strong>Type:</strong> Big City, Capital
                                 <br>
@@ -249,7 +261,7 @@
                     </li>
                     <li class="accordion-navigation">
                         <a href="#panel6a">
-                        <h3>6. Trinidad ---> Camagüey
+                            <h3>6. Trinidad ---> Camagüey
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -279,7 +291,7 @@
                     </li>
                     <li class="accordion-navigation">
                         <a href="#panel7a">
-                        <h3>7. Camagüey
+                            <h3>7. Camagüey
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i><i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
@@ -311,7 +323,7 @@
                     </li>
                     <li class="accordion-navigation">
                         <a href="#panel8a">
-                        <h3>8. Camagüey ---> Bayamo
+                            <h3>8. Camagüey ---> Bayamo
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -520,12 +532,12 @@
                     </li>
                 </ul>
             </div>
+        </section>
+        <section>
+            <div class="normal-content text-center">
+                <h2>Feedback</h2>
+                <p>Like what you found? Didn't like what you found? Either way, we want to hear from you. Take a few minutes to answer our questions! This will help us to build better routes for you! </p>
+                <p><a href="//docs.google.com/forms/d/1t5Qh1RJmjutaiRxtxsx1bITVY8XoJ_Bega2qlvvP2No/viewform">Click</a> here for the feedback form.</p>
+            </div>
+        </section>
         </div>
-    </div>
-    </section>
-    <section>
-        <div class="normal-content text-center">
-            <h2>Feedback</h2>
-            <p>Like what you found? Didn't like what you found? Either way, we want to hear from you. Take a few minutes to answer our questions! This will help us to build better routes for you! </p><p><a href="//docs.google.com/forms/d/1t5Qh1RJmjutaiRxtxsx1bITVY8XoJ_Bega2qlvvP2No/viewform">Click</a> here for the feedback form.</p>
-        </div>
-</section>
