put social share icons in own partial,

--- a/themes/trackfellas/layout/cuba.ejs
+++ b/themes/trackfellas/layout/cuba.ejs
@@ -1,10 +1,4 @@
-<aside id="sticky-social">
-    <ul>
-        <li><a href="https://www.facebook.com/sharer/sharer.php?u=<%- page.permalink %>" class="entypo-facebook popup"><span>Facebook</span></a></li>
-        <li><a href="http://twitter.com/home?status=<%- page.permalink %>" class="entypo-twitter" target="_blank"><span>Twitter</span></a></li>
-        <li><a href="https://plus.google.com/share?url=Check%20out%20this%20rTrackfellas%20post:%20<%- page.permalink %>" class="entypo-gplus" target="_blank"><span>Google+</span></a></li>
-    </ul>
-</aside>
+<%- partial('_partial/social') %>
 <%- image_tag( 'img/havanna.jpg', {alt: 'Old Car in Havanna', class: 'hero'}) %>
     <div class="row">
         <div class="normal-content">
