--- a/themes/trackfellas/layout/_partial/header.ejs
+++ b/themes/trackfellas/layout/_partial/header.ejs
@@ -3,7 +3,7 @@
     <div class="contain-to-grid"><nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                        <a href="/"><img id="logo" src="/img/logo.svg" alt="Trackfellas Logo"></a>
+                        <a href="/"><img id="logo" src="<%- url_for('/img/logo.svg') %>" alt="Trackfellas Logo"></a>
                     </li>
             <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
         </ul>
