--- a/themes/trackfellas/layout/index.ejs
+++ b/themes/trackfellas/layout/index.ejs
@@ -1,6 +1,6 @@
     <%- image_tag( 'img/run_small.jpg', {alt: 'Kid running', class: 'hero'}) %>
-<a data-scroll href="#signup">
-    <div class="row show-for-large-only"><img id="stoerer" src="/img/stoerer.png" alt="stoerer"></div>
+<a href="#signup">
+    <div class="row show-for-large-only"><%- image_tag( '/img/stoerer.png', {alt: 'Stoerer', id: 'stoerer'}) %></div>
 </a>
 <section id="about">
     <div class="big-content">
@@ -86,6 +86,7 @@
         c-1.1-1-3.2-1.5-6.3-1.5h-9c-3.9,0-7.4-0.5-10.6-1.4c-3.2-1-5.8-2.1-7.8-3.6c-2-1.4-3.8-3.2-5.3-5.3c-1.5-2.1-2.6-4.1-3.4-6
         s-1.3-3.9-1.8-6.2s-0.7-4-0.8-5.3C249.2,173.1,249.1,171.8,249.1,170.4z"/>
 </g>
+</g>
 </svg>
                         </div>
                         <div class="small-7 medium-8 columns">
@@ -105,7 +106,7 @@
         <p class="text-center white">We are a team of passionate travelers. Trackfellas is a product of our own wanderlust and deep understanding of technology.</p>
         <ul class="small-block-grid-1 medium-block-grid-3">
             <li class="text-center">
-                <img class="teampic" src="/img/moritz_small.jpg" alt="moritz Hubl">
+                <%- image_tag( '/img/moritz_small.jpg', {alt: 'Moritz Hubl', class: 'teampic'}) %>
                 <h3>Moritz Hubl</h3>
                 <h4>CEO</h4>
                 <div>
@@ -114,7 +115,7 @@
                 </div>
             </li>
             <li class="text-center">
-                <img class="teampic" src="/img/lucas_small.jpg" alt="Lucas Michot">
+                <%- image_tag( '/img/lucas_small.jpg', {alt: 'Lucas Michot', class: 'teampic'}) %>
                 <h3>Lucas Michot</h3>
                 <h4>CTO</h4>
                 <div>
@@ -123,7 +124,7 @@
                 </div>
             </li>
             <li class="text-center">
-                <img class="teampic" src="/img/niklas_small.jpg" alt="Niklas Hofmann">
+                <%- image_tag( '/img/niklas_small.jpg', {alt: 'Niklas Hofmann', class: 'teampic'}) %>
                 <h3>Niklas Hofmann</h3>
                 <h4>CMO/CFO</h4>
                 <div>
@@ -162,7 +163,7 @@
     </div>
 </section>
 <section id="contact">
-    <div class="big-content">
+    <div class="normal-content">
         <h2 class="text-center"><span class="line-dark">Get in touch!</span></h2>
         <p class="text-center">If you want to know more, shoot us an email or get in touch on social media:
             <a href="mailto:team@trackfellas.com">team@trackfellas.com</a>
