--- a/themes/trackfellas/layout/_partial/google-analytics.ejs
+++ b/themes/trackfellas/layout/_partial/google-analytics.ejs
@@ -1,6 +1,6 @@
 <% if (theme.google_analytics){ %>
 <script type="text/javascript">
-    var gaProperty = '56536675-1';
+    var gaProperty = 'UA-56536675-1';
     var disableStr = 'ga-disable-' + gaProperty;
     if (document.cookie.indexOf(disableStr + '=true') > -1) {
         window[disableStr] = true;
@@ -9,6 +9,8 @@
         document.cookie = disableStr + '=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/';
         window[disableStr] = true;
     }
+</script>
+<script type="text/javascript">
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
