--- a/themes/trackfellas/layout/index.ejs
+++ b/themes/trackfellas/layout/index.ejs
@@ -3,7 +3,7 @@
     <div class="row show-for-large-only"><%- image_tag( '/img/stoerer.png', {alt: 'Stoerer', id: 'stoerer'}) %></div>
 </a>
 <section id="about">
-    <div class="big-content">
+    <div class="normal-content">
         <h2 class="text-center"><span class="line-dark">About</span></h2>
         <p class="text-center">Trackfellas is your community and marketplace for travel routes. Discover routes for your next trip, plan your trip on a map, rate your travel experiences and share your best travel routes on our marketplace with fellow travelers. We provide all the information you need for your next individual trip in one place! That's the only all-inclusive you find here, we promise!</p>
         <div class="row">
@@ -11,7 +11,7 @@
                 <li>
                     <div class="row">
                         <div class="small-5 medium-4 columns">
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+                            <svg version="1.1" x="0px" y="0px" viewBox="0 0 500 500">
                                 <path id="Discover__x2F__map-3-icon" fill="#3D3D3F" d="M462,406.9L415.1,360c6.9-10.8,10.8-23.6,10.8-37.4
         c0-38.6-31.4-69.9-69.9-69.9c-38.6,0-69.9,31.4-69.9,69.9s31.4,69.9,69.9,69.9c13,0,25.3-3.6,35.7-9.8l47.2,47.2L462,406.9z
          M312.1,322.6c0-24.2,19.7-43.9,43.9-43.9c24.2,0,43.9,19.7,43.9,43.9c0,24.2-19.7,43.9-43.9,43.9
@@ -30,7 +30,7 @@
                 <li>
                     <div class="row">
                         <div class="small-5 medium-4 columns">
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+                            <svg version="1.1" x="0px" y="0px" viewBox="4 0 500 500">
                                 <path id="Plan__x2F__navigation-10-icon" fill="#3D3D3F" d="M320.6,103.1l61.8-22.7l-23,62.1l-7.5-31.6L320.6,103.1z M427,107.3
         c0,39.7-34.5,66-70.9,102.4c-36.4-36.4-70.9-62.7-70.9-102.4c0-39.1,31.7-70.9,70.9-70.9C395.3,36.5,427,68.2,427,107.3z
          M405.6,105.2c0-27.3-22.1-49.4-49.4-49.4c-27.3,0-49.4,22.1-49.4,49.4c0,27.3,22.1,49.4,49.4,49.4
@@ -55,7 +55,7 @@
                 <li>
                     <div class="row">
                         <div class="small-5 medium-4 columns">
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+                            <svg version="1.1" x="0px" y="0px" viewBox="0 0 500 500">
                                 <path id="Rate__x2F__star-2-outline-icon" fill="#3D3D3F" d="M239.2,98.9l39.6,81.7l89.9,12.4l-65.4,62.9l16,89.3l-80-42.8
         l-80,42.8l16-89.3L109.7,193l89.9-12.4L239.2,98.9z M239.2,35.6l-58,119.7L49.5,173.4l95.9,92.2L122,396.5l117.3-62.7l117.3,62.7
         l-23.4-130.9l95.9-92.2l-131.7-18.2L239.2,35.6z" />
@@ -70,11 +70,11 @@
                 <li>
                     <div class="row">
                         <div class="small-5 medium-4 columns">
-                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+                            <svg version="1.1" x="0px" y="0px" viewBox="0 0 500 500">
                                 <g>
                                     <path id="arrow-58-icon" fill="#3D3D3F" d="M244.6,303.1L244.6,303.1L412,187.3L244.6,71.6v49.3c0,0-203.7,41.4-244.6,219.5
     c87.1-93.2,244.6-86.7,244.6-86.7V303.1L244.6,303.1z"/>
-<g enable-background="new    ">
+<g>
     <path fill="#FFFFFF" d="M249.1,170.4v-9.2c0-5.2,0.8-9.8,2.3-13.6c1.6-3.9,3.8-6.9,6.6-9.2c2.9-2.2,6-3.9,9.6-5
         c3.5-1.1,7.4-1.7,11.8-1.9v-13h16.2v13c5.2,0.2,9.6,0.7,13.2,1.4c3.6,0.8,7.6,1.9,12,3.5v22.6c-9.1-1-19.6-1.5-31.5-1.5
         c-4.4,0-7.4,0.4-8.9,1.1c-1.5,0.7-2.2,2.6-2.2,5.5v1.7c0,2.6,0.6,4.4,1.7,5.5c1.1,1.1,3.6,1.6,7.3,1.6h9.6c3.1,0,6,0.4,8.7,1.1
@@ -100,7 +100,7 @@
     </div>
 </section>
 <section id="team">
-    <div class="big-content">
+    <div class="normal-content">
         <h2 class="text-center"><span class="line-light">Team</span>
         </h2>
         <p class="text-center white">We are a team of passionate travelers. Trackfellas is a product of our own wanderlust and deep understanding of technology.</p>
@@ -136,18 +136,18 @@
     </div>
 </section>
 <section id="blog">
-    <div class="big-content">
+    <div class="normal-content">
         <h2 class="text-center"><span class="line-dark">Blog</span>
         </h2>
         <p class="text-center">
-            <a href="//trackfellas.com/blog">Here</a> you find all about trackfellas, new features, the company, news, travel stories and tips and much more that makes you want to grab your backpack.
+            <a href="//trackfellas.com/blog/">Here you find all about Trackfellas</a>, new features, the company, news, travel stories and tips and much more that makes you want to grab your backpack.
         </p>
         <div class="row content-div">
         </div>
     </div>
 </section>
 <section id="signup">
-    <div class="big-content">
+    <div class="normal-content">
         <h2 class="text-center"><span class="line-light">Sign Up</span></h2>
         <p class="white text-center">Enter your email address below to get notified when we launch our Beta program.</p>
         <form id="newsletter-form" name="newsletter-form" method="post" action="http://trackfellas.us9.list-manage.com/subscribe/post?u=ba98f7b68e9f54395028fd8ac&amp;id=b99cb71b5f">
@@ -156,7 +156,7 @@
                     <input type="email" name="EMAIL" id="email" value="" autocomplete="off" placeholder="Email Address...">
                 </div>
                 <div class="small-4 medium-2 large-2 columns end">
-                    <button class="button round postfix" type="submit" value="Subscribe">Sign up</button>
+                    <button class="button secondary round postfix" type="submit" value="Subscribe">SIGN UP</button>
                 </div>
             </div>
         </form>
@@ -168,6 +168,7 @@
         <p class="text-center">If you want to know more, shoot us an email or get in touch on social media:
             <a href="mailto:team@trackfellas.com">team@trackfellas.com</a>
         </p>
+        <div class="small-content">
         <ul class="small-block-grid-2 medium-block-grid-4">
             <li class="text-center">
                 <a href="https://www.google.com/+trackfellas" rel="publisher"><img class="sma" src="/img/googletouch.svg" alt="Google+"></a>
@@ -182,5 +183,6 @@
                 <a href="https://www.linkedin.com/company/trackfellas"><img class="sma" src="/img/linkedintouch.svg" alt="LinkedIn"></a>
             </li>
         </ul>
+        </div>
     </div>
 </section>
