--- a/themes/trackfellas/layout/_partial/social.ejs
+++ b/themes/trackfellas/layout/_partial/social.ejs
@@ -1,7 +1,7 @@
 <aside id="sticky-social">
     <ul>
-        <li><a href="https://www.facebook.com/sharer/sharer.php?u=http://tfl.la/cubaroute" class="entypo-facebook popup"><span>Facebook</span></a></li>
-        <li><a href="http://twitter.com/home?status=http://tfl.la/cubaroute" class="entypo-twitter" target="_blank"><span>Twitter</span></a></li>
-        <li><a href="https://plus.google.com/share?url=Check%20out%20this%20rTrackfellas%20post:%20http://tfl.la/cubaroute" class="entypo-gplus" target="_blank"><span>Google+</span></a></li>
+        <li><a target="popup" onclick="window.open('', 'popup', 'width=580,height=360,scrollbars=no, toolbar=no,status=no,resizable=yes,menubar=no,location=no,directories=no,top=10,left=10')" href="https://www.facebook.com/sharer/sharer.php?u=http://tfl.la/cubaroute" class="facebook"><span><i class="fa fa-facebook"></i></span></a></li>
+        <li><a target="popup" onclick="window.open('', 'popup', 'width=580,height=360,scrollbars=no, toolbar=no,status=no,resizable=yes,menubar=no,location=no,directories=no,top=10,left=10')"  href="http://twitter.com/home?status=http://tfl.la/cubaroute" class="twitter" target="_blank"><span><i class="fa fa-twitter"></i></span></a></li>
+        <li><a target="popup" onclick="window.open('', 'popup', 'width=580,height=360,scrollbars=no, toolbar=no,status=no,resizable=yes,menubar=no,location=no,directories=no,top=10,left=10')"  href="https://plus.google.com/share?url=Check%20out%20this%20rTrackfellas%20post:%20http://tfl.la/cubaroute" class="gplus" target="_blank"><span><i class="fa fa-google-plus"></i></span></a></li>
     </ul>
 </aside>
