--- a/themes/trackfellas/layout/index.ejs
+++ b/themes/trackfellas/layout/index.ejs
@@ -140,7 +140,7 @@
         <h2 class="text-center"><span class="line-dark">Blog</span>
         </h2>
         <p class="text-center">
-            <a href="//trackfellas.com/blog/">Here you find all about Trackfellas</a>, new features, the company, news, travel stories and tips and much more that makes you want to grab your backpack.
+            <a href="//blog.trackfellas.com">Here you find all about Trackfellas</a>, new features, the company, news, travel stories and tips and much more that makes you want to grab your backpack.
         </p>
         <div class="row content-div">
         </div>
