adjusted css for travel-route

--- a/themes/trackfellas/layout/index.ejs
+++ b/themes/trackfellas/layout/index.ejs
@@ -3,10 +3,9 @@
     <div class="row show-for-large-only"><%- image_tag( '/img/stoerer.png', {alt: 'Stoerer', id: 'stoerer'}) %></div>
 </a>
 <section id="about">
-    <div class="normal-content">
+    <div class="normal-content-first">
         <h2 class="text-center"><span class="line-dark">About</span></h2>
         <p class="text-center">Trackfellas is your community and marketplace for travel routes. Discover routes for your next trip, plan your trip on a map, rate your travel experiences and share your best travel routes on our marketplace with fellow travelers. We provide all the information you need for your next individual trip in one place! That's the only all-inclusive you find here, we promise!</p>
-        <div class="row">
             <ul class="small-block-grid-1 medium-block-grid-2">
                 <li>
                     <div class="row">
@@ -96,7 +95,6 @@
                     </div>
                 </li>
             </ul>
-        </div>
     </div>
 </section>
 <section id="team">
@@ -168,7 +166,7 @@
         <p class="text-center">If you want to know more, shoot us an email or get in touch on social media:
             <a href="mailto:team@trackfellas.com">team@trackfellas.com</a>
         </p>
-        <div class="small-content">
+        <div class="small-content-contact">
         <ul class="small-block-grid-2 medium-block-grid-4">
             <li class="text-center">
                 <a href="https://www.google.com/+trackfellas" rel="publisher"><img class="sma" src="/img/googletouch.svg" alt="Google+"></a>
