--- a/themes/trackfellas/source/css/app.scss
+++ b/themes/trackfellas/source/css/app.scss
@@ -25,7 +25,7 @@
 // "themes/trackfellas/bower_components/foundation/scss/foundation/components/panels",
 // "themes/trackfellas/bower_components/foundation/scss/foundation/components/pricing-tables",
 // "themes/trackfellas/bower_components/foundation/scss/foundation/components/progress-bars",
-// "themes/trackfellas/bower_components/foundation/scss/foundation/components/reveal",
+"themes/trackfellas/bower_components/foundation/scss/foundation/components/reveal",
 // "themes/trackfellas/bower_components/foundation/scss/foundation/components/side-nav",
 "themes/trackfellas/bower_components/foundation/scss/foundation/components/split-buttons",
 // "themes/trackfellas/bower_components/foundation/scss/foundation/components/sub-nav",
