--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -1,5 +1,4 @@
 // general content elements:
-
 @mixin content-sec {
     margin: 0 auto;
     padding: 3.75rem 0rem 3.75rem 0rem;
@@ -13,9 +12,18 @@ h2 {
     text-align: center;
     text-transform: uppercase;
     }
+p {
+    padding-bottom: 2.5rem;
+}
+;
+}
+
+@mixin content-sec-route {
+    @include content-sec;
+    padding: 3.75rem 0rem 0rem 0rem;
     p {
-    margin-bottom: 2.5rem;
-    }
+    padding-bottom: 0rem;
+}
 }
 ul.accordion {
     margin-right: 0.625rem;
@@ -36,6 +44,17 @@ ul.accordion {
   @include content-sec;
 }
 
+.big-content-route {
+  @include grid-column(
+    $columns:10,
+    $last-column:true,
+    $center:true,
+    $offset:1,
+    $collapse:false,
+    $float:right
+  );
+  @include content-sec-route;
+}
 .normal-content {
   @include grid-column(
     $columns:8,
@@ -46,6 +65,21 @@ ul.accordion {
     $float:right
   );
   @include content-sec;
+}
+.normal-content-first {
+  @extend .normal-content;
+  padding: 3.75rem 0 0 0;
+}
+.normal-content-route {
+      @include grid-column(
+        $columns:8,
+        $last-column:true,
+        $center:true,
+        $offset:2,
+        $collapse:false,
+        $float:right
+      );
+  @include content-sec-route;
 }
 
 .small-content {
@@ -58,11 +92,23 @@ ul.accordion {
     $float:right
   );
   @include content-sec;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+}
+.small-content-route {
+  @include grid-column(
+    $columns:6,
+    $last-column:true,
+    $center:true,
+    $offset:3,
+    $collapse:false,
+    $float:right
+  );
+  @include content-sec-route;
+}
+.small-content-contact {
+    @extend .small-content;
+    padding: 0;
 }
 
-.about-section
 // Basic stuff
 html {
 	max-width: 1920px;
@@ -1061,3 +1107,34 @@ ul {
         border-bottom: 10px solid transparent;
     }
 }
+
+// Multipage css
+.multipage_nav { border-top:1px solid #CCC; padding-top:10px;}
+.multipage_nav a { font-weight: bold; display:block; padding: 10px 20px; color: #FFF; text-shadow: #333 1px 1px 5px; text-decoration:none; -moz-box-shadow: 0px 0px 5px #333; -webkit-box-shadow: 0px 0px 5px #333; }
+.multipage_nav .multipage_next { @extend .button;}
+
+.multipage_nav .multipage_back {
+@extend .button;}
+
+.multipage_nav .submit {
+
+@extend .button
+}
+
+.multipage_nav .multipage_state { display: block; text-align:center; width:100px; margin-left:auto;margin-right:auto; font-size:18px;}
+.multipage fieldset { @extend .panel }
+
+div.clearer{
+    display: block;
+    visibility: hidden;
+    clear: both;
+    height:0;
+    border-width:0;
+    margin:0;
+    padding:0;
+}
+
+ul.multipage_tabs { list-style-type: none; margin:0px; padding:0px; border-bottom:1px solid #CCC; margin-bottom:20px;}
+ul.multipage_tabs li { display:block; float: left; margin-right:20px;}
+ul.multipage_tabs li a { display:block; padding:10px; }
+ul.multipage_tabs li.active { background: #CCC; }
