--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -595,82 +595,76 @@ $social-list: (
     animation: formError .4s ease both;
 }
 
-// social sidebar
+// social bar
 
-a {
-   text-decoration: none;
+.social {
+    margin: 0;
+    left: 0;
+    position: fixed;
+    top: 150px;
 }
-ul {
-   list-style: none;
-   margin: 0;
-   padding: 0;
+
+
+    .social li a {
+      display: block;
+      height: 60px;
+      width: 60px;
+      background: #222;
+      font: normal normal normal
+      1.3rem/1.7rem
+      'FontAwesome', 'Source Sans Pro', Helvetica, Arial, sans-serif;
+      color: #fff;
+      -webkit-font-smoothing: antialiased;
+      padding: 15px;
+      text-decoration: none;
+      text-align: center;
+      transition: background .4s ease .300ms
+    }
+.social li:first-child a { background: #3b5998 }
+.social li:first-child a:hover { background: scale-color(#3b5998, $lightness: -11%)}
+.social li:nth-child(2) a { background: #00acee }
+.social li:nth-child(2) a:hover {background: scale-color(#00acee, $lightness: -11%)}
+.social li:nth-child(3) a { background: #cc3732 }
+.social li:nth-child(3) a:hover {background: scale-color(#cc3732, $lightness: -11%)}
+
+.social li:first-child a { border-radius: 0 5px 0 0 }
+.social li:last-child a { border-radius: 0 0 5px 0 }
+
+.social li a span {
+  width: 100px;
+  float: left;
+  text-align: center;
+  background: #222;
+  color: #fff;
+  margin: -25px 74px;
+  padding: 8px;
+  transform-origin: 0;
+  visibility: hidden;
+  opacity: 0;
+  transform: rotateY(45deg);
+  border-radius: 5px;
+  transition: all .5s ease .300ms
 }
-.container {
-   margin: 0 auto;
-   padding: 20px 50px;
-   background: white;
+
+/* .social li span:after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: -20px;
+  top: 7px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid #222;
+  border-bottom: 10px solid transparent;
+  border-top: 10px solid transparent;
 }
-#sticky-social {
-   left: 0;
-   position: fixed;
-   top: 150px;
-}
-#sticky-social a {
-   background: #333;
-   color: #fff;
-   display: block;
-   height: 50px;
-   font: 16px "Open Sans", sans-serif;
-   line-height: 50px;
-   position: relative;
-   text-align: center;
-   width: 50px;
-}
-#sticky-social a span {
-   line-height: 50px;
-   left: -120px;
-   position: absolute;
-   text-align:center;
-   width:120px;
-}
-#sticky-social a:hover span {
-   left: 100%;
-}
-#sticky-social a[class*="facebook"],
-#sticky-social a[class*="facebook"]:hover,
-#sticky-social a[class*="facebook"] span { background: #3b5998; }
 
-#sticky-social a[class*="twitter"],
-#sticky-social a[class*="twitter"]:hover,
-#sticky-social a[class*="twitter"] span { background: #00aced; }
-
-#sticky-social a[class*="gplus"],
-#sticky-social a[class*="gplus"]:hover,
-#sticky-social a[class*="gplus"] span { background: #dd4b39; }
-
-#sticky-social a[class*="linkedin"],
-#sticky-social a[class*="linkedin"]:hover,
-#sticky-social a[class*="linkedin"] span { background: #007bb6; }
-
-#sticky-social a[class*="instagrem"],
-#sticky-social a[class*="instagrem"]:hover,
-#sticky-social a[class*="instagrem"] span { background: #517fa4; }
-
-#sticky-social a[class*="stumbleupon"],
-#sticky-social a[class*="stumbleupon"]:hover,
-#sticky-social a[class*="stumbleupon"] span { background: #eb4924; }
-
-#sticky-social a[class*="pinterest"],
-#sticky-social a[class*="pinterest"]:hover,
-#sticky-social a[class*="pinterest"] span { background: #cc2127; }
-
-#sticky-social a[class*="flickr"],
-#sticky-social a[class*="flickr"]:hover,
-#sticky-social a[class*="flickr"] span { background: #ff0084; }
-
-#sticky-social a[class*="tumblr"],
-#sticky-social a[class*="tumblr"]:hover,
-#sticky-social a[class*="tumblr"] span { background: #32506d; }
+ .social li a:hover span {
+  visibility: visible;
+  opacity: 1;
+  transform: rotateY(0)
+} */
 // Slider appearance
 /* Slider */
 .galerie {
